--- a/src/app/addnew/addnew.component.html
+++ b/src/app/addnew/addnew.component.html
@@ -1,5 +1,5 @@
 <div class="card-box">
-<form [formGroup]="register">
+<form [formGroup]="register" (ngSubmit)="SaveCustomer()">
   <div class="row">
     <h2 style="text-align: center;">Add/Edit Customer</h2>
   </div>
