--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <h1>Hope Tutors Angular Training</h1>
 
 <!-- <app-login></app-login> -->
-<app-addnew></app-addnew>
+<!-- <app-addnew></app-addnew> -->
+
+<router-outlet></router-outlet>
