--- a/src/app/addnew/addnew.component.html
+++ b/src/app/addnew/addnew.component.html
@@ -45,7 +45,7 @@
       </div>
       <div class="col-lg-3">
         <br>
-        <span class={{messageclass}}>{{message}}</span>
+        <span ngClass={{messageclass}}>{{message}}</span>
       </div>
     </div>
   </div>
