--- a/src/styles.css
+++ b/src/styles.css
@@ -8,3 +8,24 @@
   margin-bottom: 10px;
   background-color: #ffffff;
 }
+
+.header {
+  width: 100%;
+  background-color: lightblue;
+  height: 40px;
+}
+
+.menulink {
+  padding: 5px;
+  text-decoration: none;
+  font-weight: bold;
+  color: #000;
+}
+
+.error {
+  color: red;
+}
+
+.sucess {
+  color: green;
+}
