--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,8 @@
   <a routerLink="" routerLinkActive="router-link-active" class="menulink">Home</a>
   <a routerLink="customer" class="menulink">Customer</a>
   <a routerLink="customer/Directives" class="menulink">Directives</a>
+    <a routerLink="customer/Pipes" class="menulink">Pipes</a>
+
 
   <a routerLink="login" style="float:right" class="menulink">Logout</a>
 </div>
