--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,13 @@
   <a routerLink="customer/Directives" class="menulink">Directives</a>
   <a routerLink="customer/Pipes" class="menulink">Pipes</a>
   <a routerLink="customer/ContentProjection" class="menulink">ContentProjection</a>
+  <a routerLink="customer/ComponentCommunication" class="menulink">Component Communication</a>
+  <a routerLink="customer/LazyLoading" class="menulink">Lazy Loading</a>
+
+
+
+
+
   <a routerLink="login" style="float:right" class="menulink">Logout</a>
 </div>
 <br>
