--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,10 @@
   <a routerLink="customer/Directives" class="menulink">Directives</a>
   <a routerLink="customer/Pipes" class="menulink">Pipes</a>
   <a routerLink="customer/ContentProjection" class="menulink">ContentProjection</a>
-  <a routerLink="customer/ComponentCommunication" class="menulink">Component Communication</a>
+  <a routerLink="customer/ServiceCommunication" class="menulink">Service Comm</a>
   <a routerLink="customer/LazyLoading" class="menulink">Lazy Loading</a>
+  <a routerLink="customer/ParentChildCommunication" class="menulink">Parent Child Comm</a>
+  <a routerLink="customer/RXJSOperators" class="menulink">RX JS Operators</a>
 
 
 
