Dependency Injection and Web Worker

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,9 +10,8 @@
   <a routerLink="customer/LazyLoading" class="menulink">Lazy Loading</a>
   <a routerLink="customer/ParentChildCommunication" class="menulink">Parent Child Comm</a>
   <a routerLink="customer/RXJSOperators" class="menulink">RX JS Operators</a>
-
-
-
+  <a routerLink="customer/WebWorker" class="menulink">Web Worker</a>
+  <a routerLink="customer/DependencyInjection" class="menulink">Dependency Injection</a>
 
 
   <a routerLink="login" style="float:right" class="menulink">Logout</a>
