--- a/src/app/listing/listing.component.html
+++ b/src/app/listing/listing.component.html
@@ -1,7 +1,7 @@
 <div class="card-box">
 <div class="row">
   <div class="col-sm-4">
-    <a routerLink="create" id="addbtn" class="btn btn-sucess btn-rounded">Add New</a>
+    <a [routerLink]="'create'" id="addbtn" class="btn btn-sucess btn-rounded">Add New</a>
   </div>
 </div>
 <div class="row">
@@ -23,7 +23,7 @@
         <td>{{item.email}} </td>
         <td>{{item.phone}} </td>
         <td>
-          <button routerLink="Edit/{{item.id}}" class="btn btn-primary">Edit</button> |
+          <button [routerLink]="'Edit/' + item.id" class="btn btn-primary">Edit</button> |
           <button  (click)="delete(item.id)" class="btn btn-danger">Delete</button>
         </td>
       </tr>
